# TinyRayCaster

./: .gitignore  CMakeLists.txt  README.md
Include/: Application.hpp  CMakeLists.txt  Color.hpp  FrameBuffer.hpp  Image.hpp  Map.hpp  Player.hpp  STBImage.hpp  Sprite.hpp  TextureAtlas.hpp
Source/: Application.cpp  CMakeLists.txt  Color.cpp  FrameBuffer.cpp  Image.cpp  Main.cpp  Map.cpp  Player.cpp  STBImage.cpp  Sprite.cpp  TextureAtlas.cpp
